test/corpus/comments.txt
==================
Comments
==================
// That's a variable
let x = 1

/// Doc comment
let x: Bool

// Several
// lines
// of Comments

let x = 1

let x /* comment */:Bool
let x =/* comment */1
/* comment */ let x = 2

/**/
let x = 1
/*
var x = 2
/* var y = 3 */
var z = 4*/

/*/

---

(source_file
      (comment)
      (variable_declaration
        (identifier)
        (integer_literal))
      (comment)
      (variable_declaration
        (identifier)
        (builtin_type))
      (comment)
      (comment)
      (comment)
      (variable_declaration
        (identifier)
        (integer_literal))
      (variable_declaration
        (identifier)
        (multiline_comment)
        (builtin_type))
      (variable_declaration
        (identifier)
        (multiline_comment)
        (integer_literal))
      (multiline_comment)
      (variable_declaration
        (identifier)
        (integer_literal))
      (multiline_comment)
      (variable_declaration
        (identifier)
        (integer_literal))
      (multiline_comment)
      (unterminated_multiline_comment))
